Commit with small corrections