@@ -1,4 +1,7 @@
-package test.repository;
+package test;
+
+import java.util.ArrayList;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -15,79 +18,74 @@ import main.repository.ProfessorInMemoryRepo;
 import main.repository.StudentInMemoryRepo;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
+class KursInMemoryRepositoryTest {
 
-class StudentInMemoryRepositoryTest {
-
-    @Test
+    @org.junit.jupiter.api.Test
     void findOne() {
-        Student s1 = new Student("S1", "SF1", 1, 0, null);
-        Student s2 = new Student("S2", "SF2", 2, 0, null);
-        Student s3 = new Student("S3", "SF3", 3, 0, null);
-        StudentInMemoryRepo studentInMemoryRepo = new StudentInMemoryRepo(Arrays.asList(s1, s2, s3));
 
-        Student student = studentInMemoryRepo.findOne(Long.parseLong("1"));
-        assertNotNull(student);
+        Kurs c1 = new Kurs("C1", null, 100, 1, null, 6);
+        Kurs c2 = new Kurs("C2", null, 2, 2, null, 25);
+        Kurs c3 = new Kurs("C3", null, 50, 3, null, 4);
+        KursInMemoryRepo kursInMemoryRepo = new KursInMemoryRepo(Arrays.asList(c1, c2, c3));
+
+        Kurs kurs = kursInMemoryRepo.findOne(Long.parseLong("1"));
+        assertNotNull(kurs);
     }
 
     @Test
     void findAll() {
-        Student s1 = new Student("S1", "SF1", 1, 0, null);
-        Student s2 = new Student("S2", "SF2", 2, 0, null);
-        Student s3 = new Student("S3", "SF3", 3, 0, null);
-        StudentInMemoryRepo studentInMemoryRepo = new StudentInMemoryRepo(Arrays.asList(s1, s2, s3));
 
-        List<Student> studentList = (List<Student>) studentInMemoryRepo.findAll();
-        assertEquals(3, studentList.size());
+        Kurs c1 = new Kurs("C1", null, 100, 1, null, 6);
+        Kurs c2 = new Kurs("C2", null, 2, 2, null, 25);
+        Kurs c3 = new Kurs("C3", null, 50, 3, null, 4);
+        KursInMemoryRepo kursInMemoryRepo = new KursInMemoryRepo(Arrays.asList(c1, c2, c3));
+
+        List<Kurs> kursList = (List<Kurs>) kursInMemoryRepo.findAll();
+        assertEquals(3, kursList.size());
     }
 
     @Test
     void save() {
-        StudentInMemoryRepo studentInMemoryRepo = new StudentInMemoryRepo(new ArrayList<>());
+        KursInMemoryRepo kursInMemoryRepo = new KursInMemoryRepo(new ArrayList<>());
 
-        Student s4 = new Student("S4", "SF4", 4, 0, null);
-        studentInMemoryRepo.save(s4);
+        Kurs c4 = new Kurs("C4", null, 60, 4, null, 12);
+        kursInMemoryRepo.save(c4);
 
-        List<Student> studentList = (List<Student>) studentInMemoryRepo.findAll();
-        assertEquals(1, studentList.size());
-
+        List<Kurs> kursList = (List<Kurs>) kursInMemoryRepo.findAll();
+        assertEquals(1, kursList.size());
     }
 
     @Test
     void delete() {
-        Student s1 = new Student("S1", "SF1", 1, 0, null);
-        Student s2 = new Student("S2", "SF2", 2, 0, null);
-        Student s3 = new Student("S3", "SF3", 3, 0, null);
-        StudentInMemoryRepo studentInMemoryRepo = new StudentInMemoryRepo(new ArrayList<>());
+        Kurs c1 = new Kurs("C1", null, 100, 1, null, 6);
+        Kurs c2 = new Kurs("C2", null, 2, 2, null, 25);
+        Kurs c3 = new Kurs("C3", null, 50, 3, null, 4);
+        KursInMemoryRepo kursInMemoryRepo = new KursInMemoryRepo(new ArrayList<>());
+        kursInMemoryRepo.save(c1);
+        kursInMemoryRepo.save(c2);
+        kursInMemoryRepo.save(c3);
 
-        studentInMemoryRepo.save(s1);
-        studentInMemoryRepo.save(s2);
-        studentInMemoryRepo.save(s3);
+        List<Kurs> kursList = (List<Kurs>) kursInMemoryRepo.findAll();
+        assertEquals(3, kursList.size());
 
-        List<Student> studentList = (List<Student>) studentInMemoryRepo.findAll();
-        assertEquals(3, studentList.size());
-
-        studentInMemoryRepo.delete(s2);
-        assertEquals(2, studentList.size());
-
+        kursInMemoryRepo.delete(c2);
+        assertEquals(2, kursList.size());
     }
 
     @Test
     void update() {
-        Student s1 = new Student("S1", "SF1", 1, 0, null);
-        StudentInMemoryRepo studentInMemoryRepo = new StudentInMemoryRepo(Arrays.asList(s1));
-        Student s2 = new Student("S2", "SF2", 1, 0, null);
+        Kurs c1 = new Kurs("C1", null, 100, 1, null, 6);
+        KursInMemoryRepo kursInMemoryRepo = new KursInMemoryRepo(List.of(c1));
+        Kurs c2 = new Kurs("C2", null, 2, 1, null, 25);
 
-        studentInMemoryRepo.update(s2);
-        assertEquals("S2", studentInMemoryRepo.findOne(Long.parseLong("1")).getLastName());
-
+        kursInMemoryRepo.update(c2);
+        assertEquals("C2", kursInMemoryRepo.findOne(Long.parseLong("1")).getName());
     }
 
     @Test
-    void addCourseToStudent() {
+    void addStudentToCourse() {
 
         List<Student> listStudentsKurse1 = new ArrayList<>();
         List<Student> listStudentsKurse2 = new ArrayList<>();
@@ -101,7 +99,6 @@ class StudentInMemoryRepositoryTest {
         List<Kurs> listKurseStudent2 = new ArrayList<>();
         List<Kurs> listKurseStudent3 = new ArrayList<>();
 
-
         Student s1 = new Student("S1", "SF1", 1, 0, null);
         Student s2 = new Student("S2", "SF2", 2, 0, null);
         Student s3 = new Student("S3", "SF3", 3, 0, null);
@@ -114,13 +111,10 @@ class StudentInMemoryRepositoryTest {
         Kurs c2 = new Kurs("C2", t2, 2, 2, null, 25);
         Kurs c3 = new Kurs("C3", t3, 50, 3, null, 4);
 
-
         listKurseStudent1.add(c1);
         listKurseStudent1.add(c3);
-
         listKurseStudent2.add(c2);
         listKurseStudent2.add(c3);
-
         listKurseStudent3.add(c1);
 
         s1.setEnrolledKurse(listKurseStudent1);
@@ -155,23 +149,22 @@ class StudentInMemoryRepositoryTest {
         c2.setStudentsEnrolled(listStudentsKurse2);
         c3.setStudentsEnrolled(listStudentsKurse3);
 
-
         List<Kurs> kursList = new ArrayList<>(Arrays.asList(c1, c2, c3));
         List<Student> studentList = new ArrayList<>(Arrays.asList(s1, s2, s3));
-        List<Professor> teacherList = new ArrayList<>(Arrays.asList(t1, t2, t3));
+        List<Professor> professorList = new ArrayList<>(Arrays.asList(t1, t2, t3));
 
-        KursInMemoryRepo courseRepo = new KursInMemoryRepo(kursList);
-        ProfessorInMemoryRepo professorRepo = new ProfessorInMemoryRepo(teacherList);
+        KursInMemoryRepo kursRepo = new KursInMemoryRepo(kursList);
+        ProfessorInMemoryRepo professorRepo = new ProfessorInMemoryRepo(professorList);
         StudentInMemoryRepo studentRepo = new StudentInMemoryRepo(studentList);
 
-        KursController kursController = new KursController(courseRepo);
+        KursController kursController = new KursController(kursRepo);
         ProfessorController professorController = new ProfessorController(professorRepo);
         StudentController studentController = new StudentController(studentRepo);
 
         MainController mainController = new MainController(kursController, studentController, professorController);
         mainController.registerStudentToKurs(Long.parseLong("3"), (Long.parseLong("1")));
 
-        List<Student> newKurseList = (List<Student>) mainController.getAllStudentsByKursId(Long.parseLong("1"));
-        assertEquals(3, newKurseList.size());
+        List<Student> newStudentList = (List<Student>) mainController.getAllStudentsByKursId(Long.parseLong("1"));
+        assertEquals(3, newStudentList.size());
     }
 }
